Update rotas/query categorias
